Add catalog view and settings

--- a/amigurumi-app/src/app/app.component.html
+++ b/amigurumi-app/src/app/app.component.html
@@ -7,13 +7,11 @@
 
 <app-menu-bar></app-menu-bar>
 
-
-<mat-slide-toggle>Toggle me!</mat-slide-toggle>
-
+<app-products></app-products>
 
 <app-login></app-login>
 
-
+<app-register></app-register>
 
 <app-footer-bar></app-footer-bar>
 
