--- a/amigurumi-app/src/app/footer-bar/footer-bar.component.html
+++ b/amigurumi-app/src/app/footer-bar/footer-bar.component.html
@@ -18,9 +18,10 @@
             </svg></li>
     </ul>
     <ul>
-        <li>Menu</li>
-        <li>Home</li>
-        <li>Contact us</li>
+      
+        <li><a href="">Home</a></li>
+        <li><a href="">Catalog</a></li>
+        <li><a href="">Contact us</a></li>
 
     </ul>
     <p>All rights reserved.</p>
