--- a/amigurumi-app/src/app/menu-bar/menu-bar.component.html
+++ b/amigurumi-app/src/app/menu-bar/menu-bar.component.html
@@ -5,20 +5,18 @@
         <img src="https://i.pinimg.com/564x/17/6e/24/176e24e7b955c7d2c60e48dbb529d15c.jpg" alt="">
     </div>
     <ul>
-        <li>Menu</li>
-        <li>HOME</li>
+      
+        <li><mat-icon>menu</mat-icon></li>
+        <li><a href="">HOME</a></li>
 
-        <li>BLOG</li>
+        <li><a href="">login</a></li>
+        <li><a href="">register</a></li>
+        <li><a href="">logout</a></li>
 
-        <li>login</li>
-        <li>register</li>
-        <li>logout</li>
-
-        <li>Catalog</li>
-        <li>Galery</li>
-
-        <li>Profile page</li>
-        <li>CONTACT US</li>
+        <li><a href="">Catalog</a></li>
+       
+        <li><a href="">Profile </a></li>
+        <li><a href="">CONTACT US</a></li>
 
     </ul>
 </nav>
