--- a/amigurumi-app/src/app/menu-bar/menu-bar.component.css
+++ b/amigurumi-app/src/app/menu-bar/menu-bar.component.css
@@ -6,8 +6,7 @@
     justify-content: end;
     gap: 1em;
     padding: 0em 3em;
-    justify-content: space-between;
-   
+    justify-content:flex-start;
 
     /* margin: -10px -8px;
     padding: 15px 10px 15px 10px; */
@@ -16,7 +15,7 @@
     font-family: 'Raleway', sans-serif;
     /* border: 1em solid  #616192 ; */
 
-border-bottom: 0.5em solid  #616192 ;
+    border-bottom: 0.5em solid #616192;
 }
 
 .main-nav ul {
@@ -26,6 +25,7 @@ border-bottom: 0.5em solid  #616192 ;
     padding: 2em 3em;
     text-align: center;
     justify-content: center;
+    margin: 0;
 }
 
 
@@ -34,17 +34,18 @@ border-bottom: 0.5em solid  #616192 ;
     display: block;
     text-transform: uppercase;
     font-weight: 600;
-    
+    text-decoration: none;
 }
 
 .main-nav div {
-    width: 10%;
+    width: 8%;
+    
     overflow: hidden;
 }
 
 .main-nav div img {
     /* border-radius: 0.3em; */
-    margin-bottom: 1em;
+    /* margin-bottom: 1em; */
     display: block;
     width: 100%;
     height: auto;
