--- a/amigurumi-app/src/app/footer-bar/footer-bar.component.css
+++ b/amigurumi-app/src/app/footer-bar/footer-bar.component.css
@@ -1,7 +1,7 @@
 footer {
     display: flex;
     justify-content: space-between;
-
+flex-wrap: wrap;
     /* text-align: center; */
     padding: 0.5em 2em;
     background: #616192;
