--- a/amigurumi-app/src/app/product/product.component.html
+++ b/amigurumi-app/src/app/product/product.component.html
@@ -2,17 +2,29 @@
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
 <li>
-    <div id="title">{{product.title}}</div>
-    <div class="prd-author" *ngIf="!showReadMoreBtn" >
+    <div id="title">
+        <h3>{{product.title}}</h3>
+    </div>
+    <div class="prd-author" *ngIf="!showReadMoreBtn">
+
         <span class="material-symbols-outlined">
             account_circle
         </span>{{product.author}}
+
     </div>
     <button *ngIf="showReadMoreBtn" (click)="readMore()">Read More</button>
     <button *ngIf="showHideBtn" (click)="hideDesc()">Hide Desc</button>
     <button (click)="toggleImage()">{{imageButtonTitle}}</button>
     <div class="desc" *ngIf="productDescLen> 0">{{descToShow}}</div>
     <img *ngIf="imageIsShown" src="{{product.imageUrl}}" alt="product image" />
+
+    <div class="prd-skillLevel" *ngIf="!showReadMoreBtn">
+        Skill Level:
+        <span class="material-symbols-outlined">
+            stars
+        </span>{{product.skillLevel}}
+
+    </div>
     <div class="settings">
         <!-- <button class="btn-edit" (click)="toggleLike()">
             <span class="material-symbols-outlined">
@@ -26,7 +38,12 @@
             </span>
             <span>{{likeButtonTitle}}</span>
         </button>
-
+        <button class="btn-like" >
+            <span class="material-symbols-outlined">
+                rate_review
+                </span>
+            <span>Add Comment</span>
+        </button>
 
         <button class="btn-edit">
             <span class="material-symbols-outlined">
