--- a/amigurumi-app/src/app/login/login.component.css
+++ b/amigurumi-app/src/app/login/login.component.css
@@ -30,6 +30,20 @@
 
   border-bottom-right-radius: 10px;
   border-top-right-radius: 10px;
+
+  /* width: 340px;
+  text-align: center;
+  border-radius: 5px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  transition: all 0.2s linear;
+  text-align: center;
+  margin-bottom: 20px;
+  margin-right: 15px;
+  background: #ADADE8;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px; */
+
+
 }
 
 .custom-button {
