--- a/amigurumi-app/src/app/product/product.component.css
+++ b/amigurumi-app/src/app/product/product.component.css
@@ -18,7 +18,8 @@ li {
     text-align: center;
     margin-bottom: 20px;
     margin-right: 15px;
-    background: #ADADE8;
+    background: #5758BB;
+    /* background: #ADADE8; */
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
@@ -37,13 +38,13 @@ img {
     border-radius: 4px;
     border: 1px solid rgb(248, 248, 248);
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-    opacity: 0.7;
+    opacity: 0.5;
     /* transform: opacity 0.3s ease-in; */
 }
 
 img:hover {
     /* transform: scale(1.04); */
-    opacity: 2;
+    opacity: 1.0;
 }
 
 #title {
@@ -66,7 +67,7 @@ button {
 }
 
 button:hover {
-    background: #616192;
+    background: #FDA7DF;
     color: white;
 }
 
