--- a/amigurumi-app/src/app/core/header/header.component.css
+++ b/amigurumi-app/src/app/core/header/header.component.css
@@ -108,25 +108,6 @@ nav {
 }
 
 
-/* button {
-    outline: none;
-    border: none;
-    background: white;
-    color: rgb(7, 7, 7);
-    padding: 6px;
-    border-radius: 3px;
-    margin: 5px;
-}
-
-button:hover {
-    background: #FDA7DF;
-    color: white;
-} */
-
-
-
-
-
 /* mini-navbar */
 
 .mini-navbar ul {
@@ -144,16 +125,24 @@ button:hover {
 
 
 .img-wrap {
-    width: 10%;
+    /* width: 10%; */
     overflow: hidden;
-
+    display: flex;
+    gap:1em;
+    justify-content: center;
+    align-items: center;
+    
 }
 
 .img-wrap img {
     /* border-radius: 0.3em; */
     /* margin-bottom: 1em; */
-    display: block;
+    /* display: block;
     width: 100%;
     height: auto;
+    margin: 0.5em 0; */
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
     margin: 0.5em 0;
 }
