--- a/amigurumi-app/src/app/core/header/header.component.html
+++ b/amigurumi-app/src/app/core/header/header.component.html
@@ -2,12 +2,11 @@
     <div class="mini-navbar-wrap">
         
         <div class="img-wrap">
-            <img class="logo" src="https://i.pinimg.com/564x/17/6e/24/176e24e7b955c7d2c60e48dbb529d15c.jpg" alt="">
-            <!-- <img src="https://i.pinimg.com/564x/2c/a4/b5/2ca4b59eeeb60d053f6186daf110b35e.jpg" alt=""> -->
+           <!-- <img src="https://i.pinimg.com/564x/2c/a4/b5/2ca4b59eeeb60d053f6186daf110b35e.jpg" alt=""> -->
             <!-- <img src="https://i.pinimg.com/564x/36/9c/0d/369c0de93bf97aecbe3f7815db0e385d.jpg" alt=""> -->
             <!-- <img src=" https://i.pinimg.com/564x/26/1b/50/261b503bbc15b5063694847183c04264.jpg" alt=""> -->
-            <p class="logo"><span class="logo">Handmade Amigurumi</span></p>
-           
+            <img src="https://i.pinimg.com/564x/17/6e/24/176e24e7b955c7d2c60e48dbb529d15c.jpg" alt="Logo" class="logo">
+            <h1 class="logo-text">Handmade Amigurumi</h1>
         </div>
         <!-- <div class="logo-wrap">
             <p class="logo"><span class="logo">Handmade Amigurumi</span></p>
