--- a/amigurumi-app/src/app/core/header/header.component.html
+++ b/amigurumi-app/src/app/core/header/header.component.html
@@ -1,8 +1,8 @@
 <header>
     <div class="mini-navbar-wrap">
-        
+
         <div class="img-wrap">
-           <!-- <img src="https://i.pinimg.com/564x/2c/a4/b5/2ca4b59eeeb60d053f6186daf110b35e.jpg" alt=""> -->
+            <!-- <img src="https://i.pinimg.com/564x/2c/a4/b5/2ca4b59eeeb60d053f6186daf110b35e.jpg" alt=""> -->
             <!-- <img src="https://i.pinimg.com/564x/36/9c/0d/369c0de93bf97aecbe3f7815db0e385d.jpg" alt=""> -->
             <!-- <img src=" https://i.pinimg.com/564x/26/1b/50/261b503bbc15b5063694847183c04264.jpg" alt=""> -->
             <img src="https://i.pinimg.com/564x/17/6e/24/176e24e7b955c7d2c60e48dbb529d15c.jpg" alt="Logo" class="logo">
@@ -14,13 +14,13 @@
         <div class="mini-navbar">
             <ul>
                 <li>
-                    <a href="#">Login</a>
+                    <a routerLink="">Login</a>
                 </li>
                 <li>
-                    <a href="#">Register</a>
+                    <a routerLink="">Register</a>
                 </li>
                 <li>
-                    <a href="#">Logout</a>
+                    <a routerLink="">Logout</a>
                 </li>
             </ul>
         </div>
@@ -29,18 +29,18 @@
         <ul>
             <!-- <li><mat-icon>menu</mat-icon></li> -->
             <li>
-                <a href="#">Home</a>
+                <a routerLink="">Home</a>
             </li>
             <li>
-                <a href="#">Catalog</a>
+                <a routerLink="catalog">Catalog</a>
             </li>
             <li>
-                <a href="#">Profile</a>
+                <a routerLink="">Profile</a>
             </li>
             <li>
-                <a href="#">Contact us</a>
+                <a routerLink="">Contact us</a>
             </li>
-         
+
         </ul>
     </nav>
 
