--- a/amigurumi-app/src/app/login/login.component.css
+++ b/amigurumi-app/src/app/login/login.component.css
@@ -1,96 +1,190 @@
-.containerLogin,
-.example-container {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  justify-content: center;
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
+
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;	
+	font-family: Raleway, sans-serif;
 }
 
-.containerLogin {
-  display: flex;
-  flex-direction: row;
-  width: 50%;
-  margin: 4rem auto;
-
-  border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-  /* background: url("https://i.pinimg.com/564x/c2/e2/f8/c2e2f8c0cdf209cbb7144c8f0b75d5ef.jpg") no-repeat center center;
-  filter: brightness(90%);
-  background-size: cover; */
+body {
+	background: linear-gradient(90deg, #C7C5F4, #776BCC);		
 }
 
-.example-container {
-  padding: 1em 0em;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  background: #f6f7f8;
-  width: 60%;
+.container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	min-height: 100vh;
+    
+}
 
-  border-bottom-right-radius: 10px;
-  border-top-right-radius: 10px;
+.screen {		
+	background: linear-gradient(90deg, #5D54A4, #7C78B8);		
+	position: relative;	
+	height: 600px;
+	width: 360px;	
+	box-shadow: 0px 0px 24px #5C5696;
+    border-radius: 12px ;
+}
 
-  /* width: 340px;
-  text-align: center;
-  border-radius: 5px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  transition: all 0.2s linear;
-  text-align: center;
-  margin-bottom: 20px;
-  margin-right: 15px;
-  background: #ADADE8;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px; */
+.screen__content {
+	z-index: 1;
+	position: relative;	
+	height: 100%;
+}
 
+.screen__background {		
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 0;
+	-webkit-clip-path: inset(0 0 0 0);
+	clip-path: inset(0 0 0 0);	
+}
+
+.screen__background__shape {
+	transform: rotate(45deg);
+	position: absolute;
+}
+
+.screen__background__shape1 {
+	height: 520px;
+	width: 520px;
+	background: #FFF;	
+	top: -50px;
+	right: 120px;	
+	border-radius: 0 72px 0 0;
+}
+
+.screen__background__shape2 {
+	height: 220px;
+	width: 220px;
+	background: linear-gradient(0deg, rgba(87, 88, 187, 1) 38%, rgba(217, 128, 250, 1) 95%);
+	top: -172px;
+	right: 0;	
+	border-radius: 32px;
+}
+
+.screen__background__shape3 {
+	height: 540px;
+	width: 190px;
+    background: linear-gradient(0deg, rgba(87, 88, 187, 1) 38%, rgba(217, 128, 250, 1) 95%);
+    /* background: linear-gradient(0deg, rgba(87, 88, 187, 1) 38%, rgba(217, 128, 250, 1) 95%); */
+	top: -24px;
+	right: 0;	
+	border-radius: 32px;
+}
+
+.screen__background__shape4 {
+	height: 400px;
+	width: 200px;
+    background: linear-gradient(0deg, rgba(87, 88, 187, 1) 38%, rgba(217, 128, 250, 1) 95%);
+	top: 420px;
+	right: 50px;	
+	border-radius: 60px;
+}
+
+.login {
+	width: 320px;
+	padding: 30px;
+	padding-top: 156px;
+}
+
+.login__field {
+	padding: 20px 0px;	
+	position: relative;	
+}
+
+.login__icon {
+	position: absolute;
+	top: 30px;
+	color: #7875B5;
+}
+
+.login__input {
+	border: none;
+	border-bottom: 2px solid #D1D1D4;
+	background: none;
+	padding: 10px;
+	padding-left: 24px;
+	font-weight: 700;
+	width: 75%;
+	transition: .2s;
+}
+
+.login__input:active,
+.login__input:focus,
+.login__input:hover {
+	outline: none;
+	border-bottom-color: #6A679E;
+}
+
+.login__submit {
+	background: #fff;
+	font-size: 14px;
+	margin-top: 30px;
+	padding: 16px 20px;
+	border-radius: 26px;
+	border: 1px solid #D4D3E8;
+	text-transform: uppercase;
+	font-weight: 700;
+	display: flex;
+	align-items: center;
+	width: 100%;
+	color: #4C489D;
+	box-shadow: 0px 2px 2px #5C5696;
+	cursor: pointer;
+	transition: .2s;
+}
+
+.login__submit:active,
+.login__submit:focus,
+.login__submit:hover {
+	border-color: #6A679E;
+	outline: none;
+}
+
+.button__icon {
+	font-size: 24px;
+	margin-left: auto;
+	color: #7875B5;
+}
+
+.social-login {	
+	position: absolute;
+	height: 140px;
+	width: 160px;
+	text-align: center;
+	bottom: 0px;
+	right: 0px;
+	color: #fff;
+}
+
+.social-icons {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.social-login__icon {
+	padding: 20px 10px;
+	color: #fff;
+	text-decoration: none;	
+	text-shadow: 0px 0px 8px #7875B5;
+}
+
+.social-login__icon:hover {
+	transform: scale(1.5);	
 
 }
 
-.custom-button {
-  background-color: #616192;
-  color: white;
-  border-radius: 10px;
+.social-login__icon svg{
+
+    fill: #fff;
 }
-
-.fit-img {
-  background: url("https://i.pinimg.com/564x/c2/e2/f8/c2e2f8c0cdf209cbb7144c8f0b75d5ef.jpg") no-repeat center center;
-  /* filter: brightness(70%); */
-  /* background-size: cover;
-  width: 100%; */
-  border-bottom-left-radius: 10px;
-  border-top-left-radius: 10px;
-
-  background-size: cover;
-  width: 40%;
-}
-
-/* .fit-img:after {
-  display: block;
-  content: "";
-  padding-top: 100%;
-} */
-
-
-.example-container mat-form-field+mat-form-field {
-  margin-left: 8px;
-}
-
-.example-container mat-form-field+mat-form-field {
-  margin-left: 8px;
-}
-
-.example-right-align {
-  text-align: right;
-}
-
-input.example-right-align::-webkit-outer-spin-button,
-input.example-right-align::-webkit-inner-spin-button {
-  display: none;
-}
-
-input.example-right-align {
-  -moz-appearance: textfield;
-}
-h2{
-  color: #616192;;
+.login__field svg{
+    fill:#5C5696;
 }
