--- a/amigurumi-app/src/app/core/footer/footer.component.css
+++ b/amigurumi-app/src/app/core/footer/footer.component.css
@@ -8,6 +8,7 @@ footer {
     /* background: #BDDCD7; */
     /* background: #61BFBE; */
     background: rgb(87,88,187);
+
     /* background: linear-gradient(0deg, rgba(0, 128, 182, 1) 0%, rgba(0, 128, 182, 1) 35%, rgba(0, 212, 255, 1) 100%); 
      */
     color: white;
@@ -18,19 +19,29 @@ footer ul {
     display: flex;
     gap: 1em;
     /* flex-direction: column; */
+    /* padding-bottom:0; */
+    justify-content:space-evenly;
+    padding :1em 0;
 }
 
 footer ul li,
 footer ul li a {
+    /* display: block;*/
     display: block;
-    color: white;
     text-decoration: none;
-    opacity: 0.7;
+    opacity: 0.7; 
+  
+	color: #fff;
+	text-decoration: none;	
+	text-shadow: 0px 0px 8px #7875B5;
 }
 
 footer ul li:hover,footer ul li a:hover,li svg:hover{
+    /* 
+    font-weight: 600; */
+    transform: scale(1.01);	
     opacity:3;
-    font-weight: 600;
+    cursor: pointer;
 }
 
 
