--- a/amigurumi-app/src/app/core/header/header.component.html
+++ b/amigurumi-app/src/app/core/header/header.component.html
@@ -14,13 +14,13 @@
         <div class="mini-navbar">
             <ul>
                 <li>
-                    <a routerLink="">Login</a>
+                    <a routerLink="login">Login</a>
                 </li>
                 <li>
-                    <a routerLink="">Register</a>
+                    <a routerLink="register">Register</a>
                 </li>
                 <li>
-                    <a routerLink="">Logout</a>
+                    <a routerLink="notFound">Logout</a>
                 </li>
             </ul>
         </div>
@@ -35,7 +35,7 @@
                 <a routerLink="catalog">Catalog</a>
             </li>
             <li>
-                <a routerLink="">Profile</a>
+                <a routerLink="profile">Profile</a>
             </li>
             <li>
                 <a routerLink="">Contact us</a>
