update profile view

--- a/amigurumi-app/src/app/register/register.component.html
+++ b/amigurumi-app/src/app/register/register.component.html
@@ -9,11 +9,11 @@
 		</div>
 		<form class="card-form">
 			<div class="input">
-				<input type="text" class="input-field" value="Alexander Parkinson" required/>
+				<input type="text" class="input-field"  required/>
 				<label class="input-label">Full name</label>
 			</div>
 						<div class="input">
-				<input type="text" class="input-field" value="vlockn@gmail.com" required/>
+				<input type="text" class="input-field"  required/>
 				<label class="input-label">Email</label>
 			</div>
 						<div class="input">
