--- a/amigurumi-app/src/app/main/main.component.html
+++ b/amigurumi-app/src/app/main/main.component.html
@@ -1,5 +1,5 @@
-
 <div>
-    <app-products></app-products>   
+    <!-- <app-products></app-products>    -->
     <!-- <app-product></app-product> -->
+    <app-product-list></app-product-list>
 </div>
