--- a/amigurumi-app/src/app/product/card-product/card-product.component.css
+++ b/amigurumi-app/src/app/product/card-product/card-product.component.css
@@ -8,6 +8,11 @@
 }
 
 li {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     list-style-type: none;
     width: 340px;
     text-align: center;
@@ -50,8 +55,12 @@ img:hover {
 #title {
     /* margin-bottom: 10px; */
     color: white;
+   border-bottom: 1px solid ;
 }
 
+h3{
+    padding-top: 0;
+}
 .desc {
     padding: 10px;
 }
