--- a/amigurumi-app/src/app/product/card-product/card-product.component.html
+++ b/amigurumi-app/src/app/product/card-product/card-product.component.html
@@ -4,25 +4,31 @@
 <li>
     <div id="title">
         <h3>{{product.title}}</h3>
+        
     </div>
 
+    <div class="desc" *ngIf="productDescLen> 0">{{descToShow}}</div>
+    <img *ngIf="imageIsShown" src="{{product.imageUrl}}" alt="product image" />
+    <button><a routerLink="details">Details</a></button>
+    <a 
+    [routerLink]="['product','detail',product.id]">
+    Profile Page
+    </a>
     <!-- <button *ngIf="showReadMoreBtn" (click)="readMore()">Read More</button>
        
         <button *ngIf="showHideBtn" (click)="hideDesc()">Hide Desc</button> -->
 
-    <button><a routerLink="details">Details</a></button>
+   
     <!-- <button><a [routerLink]="['product','detail',p.id]">Details</a></button> -->
 
 
     <!-- <button (click)="toggleImage()">{{imageButtonTitle}}</button> -->
-    <div class="desc" *ngIf="productDescLen> 0">{{descToShow}}</div>
-    <img *ngIf="imageIsShown" src="{{product.imageUrl}}" alt="product image" />
-
-    <div class="prd-skillLevel" *ngIf="!showReadMoreBtn">
+    
+    <!-- <div class="prd-skillLevel" *ngIf="!showReadMoreBtn">
         Skill Level:
         <span class="material-symbols-outlined">
             stars
         </span>{{product.skillLevel}}
-    </div>
+    </div> -->
 
 </li>
