--- a/amigurumi-app/src/app/product/card-product/card-product.component.html
+++ b/amigurumi-app/src/app/product/card-product/card-product.component.html
@@ -12,7 +12,7 @@
     <button><a routerLink="details">Details</a></button>
     <a 
     [routerLink]="['product','detail',product.id]">
-    Profile Page
+    Details Page
     </a>
     <!-- <button *ngIf="showReadMoreBtn" (click)="readMore()">Read More</button>
        
