--- a/amigurumi-app/src/app/user/register/register.component.html
+++ b/amigurumi-app/src/app/user/register/register.component.html
@@ -25,7 +25,7 @@
 			</div>
 		</form>
 		<div class="card-info">
-			<p>If you already have a registration, please <a routerLink="login">Log in</a></p>
+			<p>If you already have a registration, please <a routerLink="/login">Log in</a></p>
 		</div>
 	</div>
 </div>
