--- a/amigurumi-app/src/app/user/login/login.component.html
+++ b/amigurumi-app/src/app/user/login/login.component.html
@@ -1,28 +1,29 @@
 <div class="container">
 	<!-- code here -->
 	<div class="card">
-		<div class="card-image">	
+		<div class="card-image">
 			<h2 class="card-heading">
 				Log in
-				
+
 			</h2>
 		</div>
 		<form class="card-form">
-		
-						<div class="input">
-				<input type="text" class="input-field" value="vlockn@gmail.com" required/>
+
+			<div class="input">
+				<input type="text" class="input-field" value="vlockn@gmail.com" required #inputEmail />
 				<label class="input-label">Email</label>
 			</div>
-						<div class="input">
-				<input type="password" class="input-field" required/>
+			<div class="input">
+				<input type="password" class="input-field" required #inputPassword />
 				<label class="input-label">Password</label>
 			</div>
 			<div class="action">
-				<button class="action-button">Get started</button>
+
+				<button class="action-button" (click)="login(inputEmail.value,inputPassword.value)">Submit</button>
 			</div>
 		</form>
 		<div class="card-info">
-			<p>If you have no registration,please <a routerLink="register">Register</a></p>
+			<p>If you have no registration,please <a routerLink="/register">Register</a></p>
 		</div>
 	</div>
 </div>
