--- a/amigurumi-app/src/app/product/details-product/details-product.component.html
+++ b/amigurumi-app/src/app/product/details-product/details-product.component.html
@@ -1,25 +1,89 @@
 <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
+
+
+<!-- <div class="row g-0 bg-primary-subtle bg-opacity-10 position-relative">
+    <div class="col-md-6 mb-md-0 p-md-4">
+        <img src="{{product.imageUrl}}" class="w-100" alt="...">
+    </div>
+    <div class="col-md-6 p-4 ps-md-0">
+        <h5 class="mt-0">{{product.title}}</h5>
+        <div class="prd-author">
+
+            <span class="material-symbols-outlined">
+                account_circle
+            </span>
+            <span>{{product.author}}</span>
+
+        </div>
+
+
+        <div class="prd-skillLevel">
+            Skill Level:
+            <span class="material-symbols-outlined">
+                stars
+            </span>{{product.skillLevel}}
+
+        </div>
+        <p>{{product.description}}</p>
+        <div class="settings">
+         
+            <button class="btn-like" (click)="toggleLike()">
+                <span class="material-symbols-outlined">
+                    thumb_up
+                </span>
+                <span>{{likeButtonTitle}}</span>
+            </button>
+            <button class="btn-comment">
+                <span class="material-symbols-outlined">
+                    rate_review
+                </span>
+                <span>Add Comment</span>
+            </button>
+
+            <button class="btn-edit">
+                <span class="material-symbols-outlined">
+                    edit
+                </span>
+                <span>Edit</span>
+            </button>
+            <button class="btn-delete">
+                <span class="material-symbols-outlined">
+                    delete</span>
+
+              
+                <span>Delete</span>
+            </button>
+
+        </div>
+    </div>
+</div> -->
 <li>
     <div id="title">
         <h3>{{product.title}}</h3>
     </div>
-    <div class="prd-author" *ngIf="!showReadMoreBtn">
-
+    <div class="prd-author">
+        <!-- <div class="prd-author" *ngIf="!showReadMoreBtn"> -->
         <span class="material-symbols-outlined">
             account_circle
         </span>
         <span>{{product.author}}</span>
 
     </div>
-    <button *ngIf="showReadMoreBtn" (click)="readMore()">Read More</button>
+    <div>
+        <span> {{product.description}}</span>
+
+
+    </div>
+    <!-- <button *ngIf="showReadMoreBtn" (click)="readMore()">Read More</button> -->
     <button *ngIf="showHideBtn" (click)="hideDesc()">Hide Desc</button>
     <button (click)="toggleImage()">{{imageButtonTitle}}</button>
     <div class="desc" *ngIf="productDescLen> 0">{{descToShow}}</div>
     <img *ngIf="imageIsShown" src="{{product.imageUrl}}" alt="product image" />
 
-    <div class="prd-skillLevel" *ngIf="!showReadMoreBtn">
+    <div class="prd-skillLevel">
+        <!-- <div class="prd-skillLevel" *ngIf="!showReadMoreBtn"> -->
         Skill Level:
         <span class="material-symbols-outlined">
             stars
