--- a/amigurumi-app/src/app/core/header/header.component.html
+++ b/amigurumi-app/src/app/core/header/header.component.html
@@ -41,7 +41,7 @@
                 <a routerLink="/">Home</a>
             </li>
             <li>
-                <a routerLink="/catalog">Catalog</a>
+                <a routerLink="/products">Catalog</a>
             </li>
             <li>
                 <a routerLink="/profile">Profile</a>
