--- a/amigurumi-app/src/app/product-list/product-list.component.css
+++ b/amigurumi-app/src/app/product-list/product-list.component.css
@@ -6,3 +6,138 @@ ul {
     flex-wrap: wrap;
     padding-top: 20px;
 }
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+
+
+* {
+    font-family: 'Raleway',
+        sans-serif;
+    font-weight: bold;
+}
+
+li {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    list-style-type: none;
+    width: 340px;
+    text-align: center;
+    border-radius: 5px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    transition: all 0.2s linear;
+    text-align: center;
+    margin-bottom: 20px;
+    margin-right: 15px;
+    background: #5758BB;
+    /* background: #ADADE8; */
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+li:hover {
+
+    transform: scale(1.04);
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    /* box-shadow: -1px 2px 27px 3px rgba(0, 0, 0, 0.09) */
+}
+
+img {
+    width: 250px;
+    height: 250px;
+    /* margin-top: 20px;
+    margin-bottom: 10px; */
+    margin:20px auto;
+    border-radius: 4px;
+    border: 1px solid rgb(248, 248, 248);
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    opacity: 0.5;
+    /* transform: opacity 0.3s ease-in; */
+}
+
+img:hover {
+    /* transform: scale(1.04); */
+    opacity: 1.0;
+}
+
+#title {
+    /* margin-bottom: 10px; */
+    color: white;
+   border-bottom: 1px solid ;
+}
+
+h3{
+    padding-top: 0;
+}
+.desc {
+    padding: 10px;
+}
+
+button {
+    outline: none;
+    border: none;
+    background: white;
+    color: rgb(7, 7, 7);
+    padding: 6px;
+    border-radius: 3px;
+    margin: 5px;
+}
+
+/* button:hover {
+    background: #FDA7DF;
+    color: white;
+}
+
+button a:hover {
+    background: #FDA7DF;
+    color: white;
+} */
+
+.material-symbols-outlined {
+    font-size: 16px;
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 18,
+        'GRAD' 0,
+        'opsz' 48
+}
+
+.settings {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    flex-wrap: wrap;
+
+}
+
+.prd-author,
+.prd-skillLevel,
+.btn-edit,
+.btn-delete,
+.btn-like,
+.btn-comment {
+    padding: 0.2em 0.8em;
+    display: flex;
+    gap: 0.5em;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.prd-author,
+.prd-skillLevel {
+    color: white;
+}
+
+
+.btn-edit,
+.btn-delete {
+    flex-shrink: 0;
+}
+
+a {
+    background: white;
+    color: rgb(7, 7, 7);
+    text-decoration: none;
+}
