--- a/amigurumi-app/src/app/product/details-product/details-product.component.css
+++ b/amigurumi-app/src/app/product/details-product/details-product.component.css
@@ -8,6 +8,8 @@
 }
 
 li {
+
+
     list-style-type: none;
     width: 340px;
     text-align: center;
@@ -16,8 +18,7 @@ li {
     padding-bottom: 20px;
     transition: all 0.2s linear;
     text-align: center;
-    margin-bottom: 20px;
-    margin-right: 15px;
+    margin: 20px auto;
     background: #5758BB;
     /* background: #ADADE8; */
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
@@ -33,18 +34,20 @@ li:hover {
 img {
     width: 250px;
     height: 250px;
+    /* width: 50px;
+    height: 350px; */
     margin-top: 20px;
     margin-bottom: 10px;
     border-radius: 4px;
     border: 1px solid rgb(248, 248, 248);
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-    opacity: 0.5;
+    /* opacity: 0.5; */
     /* transform: opacity 0.3s ease-in; */
 }
 
 img:hover {
     /* transform: scale(1.04); */
-    opacity: 1.0;
+    /* opacity: 1.0; */
 }
 
 #title {
