--- a/amigurumi-app/src/app/product/details-product/details-product.component.html
+++ b/amigurumi-app/src/app/product/details-product/details-product.component.html
@@ -90,7 +90,7 @@
         </span>{{product.skillLevel}}
 
     </div>
-    <div class="settings">
+    <div class="settings" *ngIf="isLoggedIn">
         <!-- <button class="btn-edit" (click)="toggleLike()">
             <span class="material-symbols-outlined">
                 thumb_up
