--- a/amigurumi-app/src/app/product/details-product/details-product.component.css
+++ b/amigurumi-app/src/app/product/details-product/details-product.component.css
@@ -50,14 +50,29 @@ img:hover {
     /* opacity: 1.0; */
 }
 
+h3 {
+    margin: 0;
+}
+
 #title {
     /* margin-bottom: 10px; */
     color: white;
+    border-bottom: 3px solid rgba(255, 255, 255, 0.5);
+    display: inline-block;
+    width: max-content;
+    margin-bottom: 20px;
 }
+
 
 .desc {
     padding: 10px;
+    font-style: italic;
+    text-align: center;
+    opacity: 0.7;
+    color: white;
 }
+
+
 
 button {
     outline: none;
@@ -110,6 +125,12 @@ button:hover {
     color: white;
 }
 
+.prd-author {
+    /* border-bottom: 2px solid white;
+    display: inline-block;
+    width: max-content; */
+    font-style: italic;
+}
 
 .btn-edit,
 .btn-delete {
