--- a/amigurumi-app/src/app/product/details-product/details-product.component.html
+++ b/amigurumi-app/src/app/product/details-product/details-product.component.html
@@ -69,17 +69,18 @@
             account_circle
         </span>
         <span>{{product.author}}</span>
-
+      
     </div>
-    <div>
-        <span> {{product.description}}</span>
 
 
+    
+    <div class="desc">
+        <span class="card-text"> {{product.description}}</span>
     </div>
     <!-- <button *ngIf="showReadMoreBtn" (click)="readMore()">Read More</button> -->
     <button *ngIf="showHideBtn" (click)="hideDesc()">Hide Desc</button>
-    <button (click)="toggleImage()">{{imageButtonTitle}}</button>
-    <div class="desc" *ngIf="productDescLen> 0">{{descToShow}}</div>
+    
+ 
     <img *ngIf="imageIsShown" src="{{product.imageUrl}}" alt="product image" />
 
     <div class="prd-skillLevel">
@@ -128,4 +129,5 @@
 
     </div>
 
+    <a [routerLink]="['..']" class="btn btn-outline-light">Back</a>
 </li>
