update home, product -details and profile

--- a/amigurumi-app/src/app/home/home.component.html
+++ b/amigurumi-app/src/app/home/home.component.html
@@ -1,1 +1,20 @@
-<p>home works!</p>
+
+<div class="page-container" >
+
+    <p>home works!</p>
+    <div class="col-lg-3 col-md-5 col-5 mx-lg-auto">
+        <img src="images/sharing-design-ideas-with-family.jpg" class="about-image about-image-small img-fluid" alt="">
+    </div>
+
+    <div class="col-lg-4 col-md-7 col-7">
+        <img src="images/living-room-interior-wall-mockup-warm-tones-with-leather-sofa-which-is-kitchen-3d-rendering.jpg" class="about-image img-fluid" alt="">
+    </div>
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-primary" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
+</div>
