--- a/amigurumi-app/src/app/product-list/product-list.component.html
+++ b/amigurumi-app/src/app/product-list/product-list.component.html
@@ -22,7 +22,9 @@
               <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
               
               
-              <button>  <a [routerLink]="product.id" class="btn btn-primary">  Details Page</a></button>
+              <button>  <a [routerLink]="product.id" class="btn btn-primary"
+                >  Details Page</a></button>
+            
             </div>
           </div>
     
