--- a/amigurumi-app/src/app/product/details-product/details-product.component.css
+++ b/amigurumi-app/src/app/product/details-product/details-product.component.css
@@ -58,9 +58,10 @@ h3 {
     /* margin-bottom: 10px; */
     color: white;
     border-bottom: 3px solid rgba(255, 255, 255, 0.5);
-    display: inline-block;
+    margin: 0 auto;
     width: max-content;
     margin-bottom: 20px;
+    font-size:28px;
 }
 
 
@@ -68,6 +69,7 @@ h3 {
     padding: 10px;
     font-style: italic;
     text-align: center;
+
     opacity: 0.7;
     color: white;
 }
@@ -135,4 +137,32 @@ button:hover {
 .btn-edit,
 .btn-delete {
     flex-shrink: 0;
+}
+
+.square-image-container {
+    position: relative;
+    width: 80%;
+    padding-bottom: 100%;
+    /* Създава квадратна форма с помощта на padding */
+
+    margin: 10px auto;
+}
+
+.square-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin: 0 auto;
+    /* Задава, че изображението ще бъде отрязано, за да покрие квадратната форма */
+}
+
+.custom-bg-style {
+    background-color: #5758BB;
+    /* Заменете с вашите собствени стойности за цвят */
+
+    max-width: 80%;
+    margin: 20px auto;
 }
