--- a/amigurumi-app/src/app/user/profile/profile.component.html
+++ b/amigurumi-app/src/app/user/profile/profile.component.html
@@ -5,12 +5,12 @@
           <!-- /Breadcrumb -->
     
           <div class="row gutters-sm">
-            <div class="col-md-4 mb-3">
-              <div class="card">
+            <div class="col-md-4 mb-3 ">
+              <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
                 <div class="card-body">
                   <div class="d-flex flex-column align-items-center text-center">
                     <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
-                    <div class="mt-3">
+                    <div class="mt-3 ">
                       <h4>{{firstName}}'s profile</h4>
                       <p class="text-secondary mb-1">Email</p>
                       <p class="text-muted font-size-sm"> {{email}}</p>
@@ -20,7 +20,7 @@
                   </div>
                 </div>
               </div>
-              <div class="card mt-3">
+              <div class="card mt-3 shadow p-3 mb-5 bg-body-tertiary rounded">
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                     <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-globe mr-2 icon-inline"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg>Website</h6>
@@ -46,7 +46,7 @@
               </div>
             </div>
             <div class="col-md-8">
-              <div class="card mb-3">
+              <div class="card mb-3 shadow p-3 mb-5 bg-body-tertiary rounded">
                 <div class="card-body">
                   <div class="row">
                     <div class="col-sm-3">
