--- a/amigurumi-app/src/app/home/home.component.html
+++ b/amigurumi-app/src/app/home/home.component.html
@@ -2,6 +2,13 @@
 <div class="page-container" >
 
     <p>home works!</p>
+    <i class="fas fa-check"></i>
+    <i class="material-icons">check</i>
+    <i class="fa-solid fa-user"></i>
+    <i class="fa-solid fa-envelope"></i>
+    <i class="fa-solid fa-user-check fa-fade"></i>
+    <i class="fa-solid fa-user-large fa-beat-fade"></i>
+
     <div class="col-lg-3 col-md-5 col-5 mx-lg-auto">
         <img src="images/sharing-design-ideas-with-family.jpg" class="about-image about-image-small img-fluid" alt="">
     </div>
