--- a/amigurumi-app/src/app/user/register/register.component.css
+++ b/amigurumi-app/src/app/user/register/register.component.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
 
-*, *:after, *:before {
+*,
+*:after,
+*:before {
 	box-sizing: border-box;
 }
 
@@ -50,6 +52,7 @@ img {
 	font-weight: 700;
 	color: #735400;
 	line-height: 1.222;
+
 	small {
 		display: block;
 		font-size: .75em;
@@ -67,6 +70,7 @@ img {
 	flex-direction: column-reverse;
 	position: relative;
 	padding-top: 1.5rem;
+
 	&+.input {
 		margin-top: 1.5rem;
 	}
@@ -83,13 +87,16 @@ img {
 	border: 0;
 	z-index: 1;
 	background-color: transparent;
-	border-bottom: 2px solid #eee; 
+	border-bottom: 2px solid #eee;
 	font: inherit;
 	font-size: 1.125rem;
 	padding: .25rem 0;
-	&:focus, &:valid {
+
+	&:focus,
+	&:valid {
 		outline: 0;
 		border-bottom-color: #6658d3;
+
 		&+.input-label {
 			color: #6658d3;
 			transform: translateY(-1.5rem);
@@ -111,6 +118,7 @@ img {
 	border-radius: 6px;
 	color: #FFF;
 	border: 0;
+
 	&:focus {
 		outline: 0;
 	}
@@ -121,6 +129,7 @@ img {
 	text-align: center;
 	font-size: .875rem;
 	color: #8597a3;
+
 	a {
 		display: block;
 		color: #6658d3;
@@ -128,6 +137,16 @@ img {
 	}
 }
 
+.genderRadio {
+	padding-top: 10px;
+	display: flex;
+	justify-content: space-around
+}
 
 
-
+input.ng-valid {
+	border-left: 5px solid #42A948;
+}
+input.ng-invalid.ng-touched {
+	border-left: 5px solid #A94442;
+}
