--- a/amigurumi-app/src/app/user/register/register.component.css
+++ b/amigurumi-app/src/app/user/register/register.component.css
@@ -111,14 +111,13 @@ img {
 .action-button {
 	font: inherit;
 	font-size: 1.25rem;
-	padding: 1em;
+	padding: 0.4em;
 	width: 100%;
 	font-weight: 500;
 	background-color: #6658d3;
 	border-radius: 6px;
 	color: #FFF;
 	border: 0;
-
 	&:focus {
 		outline: 0;
 	}
@@ -145,8 +144,18 @@ img {
 
 
 input.ng-valid {
-	border-left: 5px solid #42A948;
+	border-left: 5px solid  #6658d3;
+	margin-right: 20px;
 }
 input.ng-invalid.ng-touched {
-	border-left: 5px solid #A94442;
+	border-left: 5px solid#f8d7da;
+	margin-right: 20px;
+}
+.error {
+	text-align: left;
+    background-color: #f8d7da;
+    padding: 8px;
+    margin:8px ;
+    border-radius: 3px;
+    font-style: italic;
 }
