update profile page, list product

--- a/amigurumi-app/src/app/product/details-product/details-product.component.html
+++ b/amigurumi-app/src/app/product/details-product/details-product.component.html
@@ -7,7 +7,7 @@
     <div class="col-md-6 mb-md-0 p-md-4">
         <div class="square-image-container">
             <img src="{{product.imageUrl}}" class="square-image" alt="...">
-            <!-- <img src="{{product.imageUrl}}" class="w-100" alt="..."> -->
+            class="w-100"
         </div>
     </div>
     <div class="col-md-6 p-4 ps-md-0">
