--- a/amigurumi-app/src/app/product-list/product-list.component.css
+++ b/amigurumi-app/src/app/product-list/product-list.component.css
@@ -24,7 +24,7 @@ li {
     list-style-type: none;
     width: 340px;
     text-align: center;
-    border-radius: 5px;
+    border-radius: .25rem;
     padding-top: 20px;
     padding-bottom: 20px;
     transition: all 0.2s linear;
@@ -49,7 +49,7 @@ img {
     /* margin-top: 20px;
     margin-bottom: 10px; */
     margin:20px auto;
-    border-radius: 4px;
+    border-radius: .25rem;
     border: 1px solid rgb(248, 248, 248);
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     opacity: 0.5;
@@ -80,7 +80,7 @@ button {
     background: white;
     color: rgb(7, 7, 7);
     padding: 6px;
-    border-radius: 3px;
+    border-radius: .25rem;
     margin: 5px;
 }
 
