--- a/amigurumi-app/src/app/user/profile/profile.component.html
+++ b/amigurumi-app/src/app/user/profile/profile.component.html
@@ -3,39 +3,118 @@
 
     <div class="row gutters-sm">
       <div class="col-md-4 mb-3 ">
-        <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
-          <div class="card-body">
-            <div class="d-flex flex-column align-items-center text-center">
+        <!-- READONLY MODE -->
+        <ng-container *ngIf="!isEditMode">
+          <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
+            <div class="card-body">
+              <div class="d-flex flex-column align-items-center text-center">
 
-              <img *ngIf="isMale" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
-                class="rounded-circle p-1 bg-primary" width="180">
-              <img *ngIf="!isMale" src="https://bootdey.com/img/Content/avatar/avatar8.png" alt="Admin"
-                class="rounded-circle p-1 bg-primary" width="180">
+                <img *ngIf="isMale" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
+                  class="rounded-circle p-1 bg-primary" width="180">
+                <img *ngIf="!isMale" src="https://bootdey.com/img/Content/avatar/avatar8.png" alt="Admin"
+                  class="rounded-circle p-1 bg-primary" width="180">
 
 
-              <div class="mt-3 ">
-                <h4>{{fullName}}'s profile</h4>
-                <p class="text-secondary mb-1 custom-p"><i class="fa-regular fa-envelope"></i> Email: {{email}}</p>
+                <div class="mt-3 ">
+                  <!-- <h4>{{fullName}}'s profile</h4> -->
+                  <h4>{{ profileDetails.fullName }}'s profile</h4>
+                  <!-- <p class="text-secondary mb-1 custom-p"><i class="fa-regular fa-envelope"></i> Email: {{email}}</p> -->
+                  <p class="text-secondary mb-1 custom-p"><i class="fa-regular fa-envelope"></i> Email: {{
+                    profileDetails.email }}</p>
 
-                <p class="text-secondary mb-1 custom-p"><i class="fa-solid fa-venus-mars"></i> Gender: {{gender}}</p>
+                  <!-- <p class="text-secondary mb-1 custom-p"><i class="fa-solid fa-venus-mars"></i> Gender: {{gender}}</p> -->
+                  <p class="text-secondary mb-1 custom-p"><i class="fa-solid fa-venus-mars"></i> Gender: {{
+                    profileDetails.gender }}</p>
 
-                <button class="btn btn-outline-primary">Edit</button>
+                  <button class="btn btn-outline-primary" (click)="toggleEditMode()">Edit</button>
+
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="card mt-3 shadow p-3 mb-5 bg-body-tertiary rounded">
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-              <h6 class="mb-0"><i class="fa-solid fa-user-large"></i> Full Name</h6>
-              <span class="text-secondary"> {{fullName}}</span>
+        </ng-container>
 
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-              <h6 class="mb-0"><i class="fa-regular fa-envelope"></i> Email</h6>
-              <span class="text-secondary">{{email}}</span>
-            </li>
-            <!-- <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+        <!-- EDIT MODE -->
+        <ng-container *ngIf="isEditMode">
+          <form #form="ngForm">
+            <!-- <form class="card-form" #loginForm="ngForm" class="card-form" (ngSubmit)="submitHandler(loginForm)"></form> -->
+            <div class="card mt-3 shadow p-3 mb-5 bg-body-tertiary rounded">
+
+              <div class="d-flex flex-column align-items-center text-center ">
+                <h3>User Info:</h3>
+                <img *ngIf="isMale" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
+                  class="rounded-circle p-1 bg-primary" width="180">
+                <img *ngIf="!isMale" src="https://bootdey.com/img/Content/avatar/avatar8.png" alt="Admin"
+                  class="rounded-circle p-1 bg-primary" width="180">
+              </div>
+
+              <h5 class=" align-items-center text-center ">{{fullName}}'s profile</h5>
+
+              <ul class="list-group list-group-flush">
+
+                <div class="input-group mb-3">
+                  <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-user-large"></i> </span>
+                  <input type="text" class="form-control" name="fullName" id="fullName" value="{{fullName}}" required
+                    ngModel #fullNameInput="ngModel" minlength="4">
+
+                </div>
+                <!--fullName error msg-->
+                <ng-container *ngIf="fullNameInput.touched">
+                  <div class="error" *ngIf="fullNameInput.errors?.['required'] ">
+
+                    Full name is required!
+                  </div>
+                  <div class="error" *ngIf="fullNameInput.errors?.['minlength']">
+
+                    Invalid Full name, because length is short
+                    than
+                    {{fullNameInput.errors?.['minlength'].requiredLength}} ...
+                  </div>
+                </ng-container>
+
+                <div class="input-group mb-3">
+                  <span class="input-group-text" id="basic-addon1">@</span>
+                  <input type="text" class="form-control" name="email" id="email" value="{{email}}" ngModel email
+                    required #emailInput="ngModel">
+
+                </div>
+
+                <!--email error msg-->
+                <ng-container *ngIf="emailInput.touched">
+                  <div class="error" *ngIf="emailInput.errors?.['required']">
+
+                    Email is required!
+                  </div>
+
+                  <div class="error" *ngIf="emailInput.errors?.['email']">Invalid Email!
+                    {{emailInput.errors?.['email'].requiredLength}} ...
+                  </div>
+                </ng-container>
+
+                <!-- <div class="input-group mb-3">
+                  <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-venus-mars"></i> </span>
+                  <input type="text" class="form-control" name="gender" id="gender" value="{{gender}}"
+                    aria-label="Username" aria-describedby="basic-addon1">
+
+                </div> -->
+                <div class="genderRadio d-flex justify-content-evenly">
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="gender" id="male" value="male"
+                      [(ngModel)]="user.gender">
+                    <label class="form-check-label" for="male">
+                      Male
+                    </label>
+                  </div>
+
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="gender" id="female" value="female"
+                      [(ngModel)]="user.gender">
+                    <label class="form-check-label" for="female">
+                      Female
+                    </label>
+                  </div>
+                </div>
+                <!-- <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                     <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter mr-2 icon-inline text-info"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>Twitter</h6>
                     <span class="text-secondary">@bootdey</span>
                   </li>
@@ -47,17 +126,27 @@
                     <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook mr-2 icon-inline text-primary"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>Facebook</h6>
                     <span class="text-secondary">bootdey</span>
                   </li> -->
-          </ul>
-          <div class="row">
-            <div class="col-sm-12">
+              </ul>
+              <div class="row">
+                <div class="d-flex justify-content-evenly">
+                  <!-- <a class="btn btn-info " target="__blank"
+                >Cancel</a>
               <a class="btn btn-info " target="__blank"
-                href="https://www.bootdey.com/snippets/view/profile-edit-data-and-skills">Edit</a>
+                >Save</a> -->
+
+                  <button type="button" class="btn btn-outline-primary" (click)="toggleEditMode()">Cancel</button>
+                  <button type="button" class="btn btn-outline-primary" (click)="saveProfileHandler(form)"
+                    [disabled]="form.invalid"
+                    >Save</button>
+
+                </div>
+              </div>
             </div>
-          </div>
-        </div>
+          </form>
+        </ng-container>
+
       </div>
       <div class="col-md-8">
-
 
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <section class="container pt-3 mb-3 ">
